--- a/src/css/layouts/navbar.css
+++ b/src/css/layouts/navbar.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: var(--size-4);
-    background-color:var(--color-primary-opacity-4);
+    /* background-color:var(--color-primary-opacity-4); */
 }
 
 .navbar a{
