--- a/src/css/layouts/navbar.css
+++ b/src/css/layouts/navbar.css
@@ -1,4 +1,27 @@
-.navbar{
+/* navbar par défaut */
+#menu-nav {
+    /* position: relative; */
+    position: sticky;
+    transition: all 0.3s ease;
+    isolation: isolate;   /* crée un nouveau stacking context propre à la navbar */
+    z-index: 999;
+}
+
+/* une fois scrolled */
+#menu-nav.scrolled {
+    top: 0;
+    background: var(--color-background);
+    backdrop-filter: blur(6px);
+    z-index: 1000;        /* au-dessus du contenu */
+    /* border-bottom: 1px solid var(--color-border); */
+
+    #page-logotype {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,7 +29,7 @@
     /* background-color:var(--color-primary-opacity-4); */
 }
 
-.navbar a{
+.navbar a {
     text-underline-offset: 8px;
     transition: var(--transition-ease);
 }
