--- a/src/css/overlays/modals.css
+++ b/src/css/overlays/modals.css
@@ -30,7 +30,7 @@ modal-dialog.is-open .modal {
     padding: var(--size-4);
     border-radius: var(--radii-3);
     box-shadow: var(--shadow-2, 0 4px 8px rgba(0, 0, 0, 0.2));
-    border:1px solid var(--color-border-primary);
+    border:1px solid var(--color-border-primary-20);
     min-width: 300px;
     opacity: 0;
     transform: translateY(40px);
