--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -36,7 +36,7 @@ textarea::placeholder{
 
 
 select option{
-    background-color: var(--color-container);
+    background-color: var(--surface-container);
 }
 
 
