--- a/src/css/leviathan.css
+++ b/src/css/leviathan.css
@@ -41,8 +41,8 @@
     ),
     linear-gradient(
       to bottom,
-      var(--color-overlay) 0%,
-      var(--color-background) 100%
+      var(--surface-overlay) 0%,
+      var(--surface-page) 100%
     );
 }
 
@@ -119,7 +119,7 @@ h1,h2,h3{
 
 .lt-page{
     /* Cadre de base */
-    .lt-frame {
+    > .lt-frame {
         background-color: var(--color-primary-opacity-10);
         width: 100%;
         max-width: 100ch; /* par défaut : lecture confortable */
