--- a/src/css/molecules/code-block.css
+++ b/src/css/molecules/code-block.css
@@ -9,7 +9,7 @@ ltds-code-block {
 ltds-code-block pre[class*="language-"] {
   padding: 1rem !important;
   ;
-  background: var(--color-background);
+  background: var(--surface-page);
   border: 1px solid var(--color-border);
   border-radius: var(--radii-2);
 }
@@ -26,14 +26,6 @@ pre[class*=language-] {
   position: absolute;
   top: var(--size-2);
   right: var(--size-2);
-  /* padding: 0 var(--size-2);
-  height: var(--size-7);
-  line-height: var(--size-7); */
-  /* border-radius: var(--radii-2);
-  border: 1px solid var(--color-border);
-  background: var(--color-primary-opacity-10);
-  color: var(--color-text-primary); */
-  /* cursor: pointer; */
   transition: background var(--transition-ease), transform var(--transition-ease), border-color var(--transition-ease);
 }
 
@@ -41,9 +33,9 @@ pre[class*=language-] {
   background: var(--color-primary-opacity-20);
 }
 
-/* .ltds-copy-btn:active {
+.ltds-copy-btn:active {
   transform: scale(0.98);
-} */
+}
 
 .ltds-copy-btn.is-copied {
   border-color: var(--color-success)!important;
