--- a/src/css/overlays/panel-menu.css
+++ b/src/css/overlays/panel-menu.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    background-color: var(--surface-overlay);
+    background-color: var(--surface-page);
     width: 80%;
     max-width: 360px;
     height: 100%;
