--- a/src/css/molecules/ltds-menu.css
+++ b/src/css/molecules/ltds-menu.css
@@ -31,7 +31,7 @@
     transform: translateY(20px) scale(0.9);
     transition: transform 0.24s cubic-bezier(0.39, 0.575, 0.565, 1);
     width: max-content;
-    background-color: var(--color-ui-white-opacity-92);
+    background-color: var(--color-ui-white);
     border: 1px solid var(--color-border);
     border-radius: var(--radii-2);
     padding: var(--size-3);
