feat: add alertcomponent to portfolio

--- a/icon-font/icons.css
+++ b/icon-font/icons.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "icons";
-    src: url("./icons.woff?2637c84e2972a1db2ce8cd6065c87f42") format("woff"),
-url("./icons.woff2?2637c84e2972a1db2ce8cd6065c87f42") format("woff2");
+    src: url("./icons.woff?f8ecbf2d9e31436216fc75537a50dc74") format("woff"),
+url("./icons.woff2?f8ecbf2d9e31436216fc75537a50dc74") format("woff2");
 }
 
 i[class^="lt-icon-"]:before, i[class*=" lt-icon-"]:before {
@@ -57,24 +57,27 @@ i[class^="lt-icon-"]:before, i[class*=" lt-icon-"]:before {
 .lt-icon-close:before {
     content: "\f10e";
 }
-.lt-icon-caret-down:before {
+.lt-icon-check:before {
     content: "\f10f";
 }
-.lt-icon-burger:before {
+.lt-icon-caret-down:before {
     content: "\f110";
 }
-.lt-icon-breakpoints:before {
+.lt-icon-burger:before {
     content: "\f111";
 }
-.lt-icon-base:before {
+.lt-icon-breakpoints:before {
     content: "\f112";
 }
-.lt-icon-back-arrow:before {
+.lt-icon-base:before {
     content: "\f113";
 }
-.lt-icon-atoms:before {
+.lt-icon-back-arrow:before {
     content: "\f114";
 }
-.lt-icon-about:before {
+.lt-icon-atoms:before {
     content: "\f115";
+}
+.lt-icon-about:before {
+    content: "\f116";
 }
