--- a/src/css/molecules/ltds-alert.css
+++ b/src/css/molecules/ltds-alert.css
@@ -14,6 +14,8 @@
         display: flex;
         align-items: center;
         gap: var(--size-1);
+        font-weight: var(--font-weight-semibold);
+        font-family: var(--font-family-accent);
     }
 }
 
