--- a/src/css/utils/reset.css
+++ b/src/css/utils/reset.css
@@ -1,6 +1,7 @@
 :root{
     /* --font-family-accent: "Oswald", var(--font-family-base); */
-    --font-family-accent: "Work Sans", var(--font-family-base);
+    /* --font-family-accent: "Work Sans", var(--font-family-base); */
+    --font-family-accent: "Mona Sans", var(--font-family-base);
     --color-text-primary:var(--color-ui-white-opacity-80);
 }
 
