page ui adjustments + navbar remove backdrop

--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -36,14 +36,16 @@
 .lt-page .lt-frame--fantasy {
   position: relative;
   overflow: hidden;
-
+  border: 1px solid var(--color-border-primary-40);
+  border-radius:var(--radii-4);
   background:
     url(/assets/textures/fabric-dark.png),
     linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)),
-    radial-gradient(circle at 20% 20%, var(--brand-primary-opacity-20), transparent 70%),
-    radial-gradient(circle at 80% 90%, var(--color-info-opacity-10), transparent 60%),
-    linear-gradient(180deg, var(--brand-primary-opacity-20) 0%, var(--brand-primary-opacity-10) 100%);
+    radial-gradient(circle at 40% 20%, var(--brand-primary-opacity-40), transparent 70%),
+    radial-gradient(circle at 80% 90%, var(--color-info-opacity-20), transparent 60%),
+    linear-gradient(180deg, var(--brand-primary-opacity-40) 0%, var(--brand-primary-opacity-20) 100%);
   background-blend-mode: overlay, multiply, normal;
+  background-size: auto;
   opacity: 0.98; /* léger voile */
 }
 
