--- a/src/css/molecules/code-block.css
+++ b/src/css/molecules/code-block.css
@@ -9,8 +9,8 @@ ltds-code-block {
 ltds-code-block pre[class*="language-"] {
   padding: 1rem !important;
   ;
-  background: var(--surface-page);
-  border: 1px solid var(--color-border);
+  background: var(--surface-overlay);
+  border: 1px solid var(--color-border-primary-20);
   border-radius: var(--radii-2);
 }
 
