--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -12,7 +12,7 @@ label{
 
 select,option,
 input,textarea{
-    font-size: var(--font-size-2);
+    font-size: var(--tfs-2);
     color: var(--color-text-primary);
 }
 
