--- a/src/css/molecules/doc-section.css
+++ b/src/css/molecules/doc-section.css
@@ -9,7 +9,7 @@
 
 .doc-section-content {
   color: var(--color-text-secondary);
-  font-size: var(--font-size-2, 1rem);
+  font-size: var(--tfs-2, 1rem);
   line-height: 1.6;
 }
 
