--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -36,15 +36,35 @@
 .lt-page .lt-frame--fantasy {
   position: relative;
   overflow: hidden;
-  border: 1px solid var(--color-border-primary-40);
-  border-radius:var(--radii-4);
+  border:1px solid var(--brand-primary-opacity-20);
+  border-radius:var(--radii-5);
+  padding: 8px;
+  background-color: var(--surface-container);
+}
+
+
+.lt-page .lt-frame--fantasy .lt-frame-content{
+  border-radius: calc(var(--radii-5) - 8px);
+  padding:16px;
+  background-blend-mode: overlay, normal;
+  background-size: auto;
   background:
     radial-gradient(circle at 40% 20%, var(--brand-primary-opacity-10), transparent 70%),
     radial-gradient(circle at 80% 90%, var(--color-info-opacity-10), transparent 60%),
     linear-gradient(180deg, var(--brand-primary-opacity-20) 0%, var(--brand-primary-opacity-10) 100%);
-  background-blend-mode: overlay, normal;
-  background-size: auto;
   opacity: 0.98; /* léger voile */
+  &::before,
+  &::after{
+    content: "";
+    position: absolute;
+    inset-inline: 0;
+    inset-block: 0;
+    height:1px;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 5%, var(--brand-primary-opacity-20) 25%, var(--brand-primary) 50%, var(--brand-primary-opacity-20) 75%, rgba(0, 0, 0, 0) 95%);
+  }
+  &::after{
+    top: calc(100% - 1px);
+  }
 }
 
 @media screen and (max-width: 768px) {
