--- a/src/css/molecules/code-block.css
+++ b/src/css/molecules/code-block.css
@@ -20,6 +20,16 @@ pre[class*=language-] {
   font-size: var(--tfs-1) !important;
 }
 
+@media screen and (max-width: 768px) {
+
+  code[class*=language-],
+  pre[class*=language-] {
+    font-size: var(--tfs-0) !important;
+  }
+
+
+}
+
 
 /* Bouton copier */
 .ltds-copy-btn {
