feat: reshape layout page and fix code block rendering

--- a/src/css/layouts/tables.css
+++ b/src/css/layouts/tables.css
@@ -27,3 +27,13 @@
 .table tr:nth-of-type(even){ 
     background-color: var(--color-primary-opacity-10);
 }
+
+@media screen and (max-width: 768px) {
+
+    .table th,
+    .table td{
+        padding: var(--size-1);
+        font-size: var(--tfs-1);
+    }
+
+}
