feat: improve card + improve tokens page doc

--- a/src/css/molecules/ltds-card.css
+++ b/src/css/molecules/ltds-card.css
@@ -201,20 +201,20 @@ ltds-card .ltds-card-footer {
 
 
 .splide__slide .ltds-card{
-    padding: var(--card-padding) var(--card-padding) 0;
     background-image: var(--brand-gradient-surface-overlay);
+    min-height: 140px;;
 }
 
 
 .splide__slide .ltds-card .ltds-card-overlay{
     background-color: var(--card-bg2);
-    box-shadow: var(--card-shadow);
+    box-shadow: var(--shadow-2);
     padding: var(--size-2);
 }
 
 
 .splide__slide .ltds-card--interactive:hover {
-    backdrop-filter: saturate(120%) blur(10px);
+    box-shadow: inset 0 0 32px 12px var(--color-ui-white-opacity-20);
     .ltds-card-overlay{
         transform: rotate(-3deg);
     }
